--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 .dancer2{
-  border:10px solid pink;
+  border:10px solid yellow;
   border-radius:10px;
   position:absolute;
 }
