--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,7 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.lineUpButton{
+  padding:5px 12px;
+  float: left;
+}
